# pyautoreplay

./: README.md  main.py  pyproject.toml  start.bat  try.ipynb
pyautoreplay/: command.py  loader.py  main.py  replay.py  watcher.py
pyautoreplay/replay/: replay.py
pyautoreplay/replay/screp/: model.py  screp.py
pyautoreplay/storage/: storage.py
pyautoreplay/utils/: action.py  loader.py
pyautoreplay/utils/window_manager/: debian.py  windows.py
pyautoreplay/watcher/: legacy.py
pyautoreplay/window_manager/: __init__.py  debian.py  windows.py
tests/: tests.py
