[tool.poetry]
name = "pyautoreplay"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
win32gui = { version = "*", optional = true }
loguru = "*"
jupyter = "*"
pyautogui = "*"
tqdm = "*"


[tool.poetry.extras]
win32gui = ["win32gui"]